<resources>
    <string name="app">OpenConnect</string>
    <string name="permission_description">Allows another app to control OpenConnect</string>
    <string name="location">Location</string>
    <string name="cant_read_folder">Unable to read directory</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="no_data">No Data</string>
    <string name="client_certificate_title">Client Certificate</string>
    <string name="securid_info">SecurID info</string>
    <string name="report_problem">Report a problem</string>
    <string name="feedback_plea">Taking a few seconds to rate an app is very important for the developer.  It allows us to continually improve the experience, and helps other users decide whether an app is right for them. How about telling us what you think?</string>
    <string name="i_love_it">I love it</string>
    <string name="needs_work">Needs work</string>
    <string name="maybe_later">Maybe later</string>
    <string name="help_with_translations">Help with translations</string>
    <string name="about_openconnect">About OpenConnect</string>
    <string name="securid_none_defined">None of your VPN profiles have a SecurID token string set.\n\nTo add one, import an \"sdtid\" file or click on a \"http://127.0.0.1/securid\" URL from your email.  See the FAQ for more information.</string>
    <string name="securid_parse_error">Unable to parse the SecurID token string in this profile.</string>
    <string name="securid_internal_error">Unable to access the VPN profile.  Please file a bug report with the author.</string>
    <string name="securid_encrypted">This profile\'s SecurID token string is encrypted. Try re-importing it.</string>
    <string name="copy">Copy</string>
    <string name="next_tokencode">Next tokencode:</string>
    <string name="using_pin">Using PIN:</string>
    <string name="token_sn">Token S/N:</string>
    <string name="exp_date">Expiration date:</string>
    <string name="gmt">Current time (GMT):</string>
    <string name="dev_id">SecurID device ID:</string>
    <string name="enter_pin">Enter PIN:</string>
    <string name="new_pin">New PIN</string>
    <string name="skip">Skip</string>
    <string name="vpn_list_title">Profiles</string>
    <string name="status">Status</string>
    <string name="log">Log</string>
    <string name="file_select">Select…</string>
    <string name="file_nothing_selected">You must select a file</string>
    <string name="configure_the_vpn">Configure the VPN</string>
    <string name="menu_add_profile">Add Profile</string>
    <string name="add_profile_hostname_prompt">Enter the hostname, IP address, or URL:</string>
    <string name="hostname_examples">Valid formats include:\nvpn.example.com (typical usage)\nvpn.example.com:443 (host:port)\nhttps://vpn.example.com/my-group-url</string>
    <string name="disconnect">Disconnect</string>
    <string name="reconnect">Reconnect</string>
    <string name="reconnect_to">Reconnect to %1$s</string>
    <string name="clear_log">Clear log</string>
    <string name="remove_vpn">Remove VPN</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>
    <string name="enter_problem">ENTER PROBLEM DESCRIPTION HERE:</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. You can help us fix this by sending us error data.</string>
    <string name="crash_dialog_comment_prompt">Please describe what was happening when the problem occurred:</string>
    <string name="problem_dialog_text">Thanks for offering your feedback for improving OpenConnect. We\'re sorry you encountered an issue but we\'ll review your report and track down the bug.</string>
    <string name="problem_dialog_comment_prompt">Please describe the nature of the problem. If you\'re willing to help the author troubleshoot it, make sure you include your email address:</string>
    <string name="bad_rom_text">Unfortunately your Android device does not have proper VpnService support.  If you click OK we will report this to the vendor, but they may or may not fix the bug.</string>
    <string name="bad_rom_comment_prompt">If you have customized your device in any way (rooting, ROM, Xposed) please note the changes below:</string>
    <string name="copied_entry">Copied to clipboard.</string>
    <string name="faq">FAQ</string>
    <string name="question_abbrev">Q:</string>
    <string name="answer_abbrev">A:</string>
    <string name="file_explorer_tab">File Explorer</string>
    <string name="inline_file_tab">Inline File</string>
    <string name="file_too_large">File is too large</string>
    <string name="error_importing_file">Error importing File</string>
    <string name="import_error_message">Could not import File from filesystem</string>
    <string name="inline_file_data">[[Inline file data]]</string>
    <string name="speed_waiting">Waiting for state message…</string>
    <string name="file_icon">file icon</string>
    <string name="generalsettings">Settings</string>
    <string name="owner_fix_summary">Tries to set the owner of /dev/tun to the \'system\' UID (1000). Some CM9 images need this to make the VPNService API work. Requires root.</string>
    <string name="owner_fix">Fix ownership of /dev/tun</string>
    <string name="edit_profile_title">Editing \"%s\"</string>
    <string name="netchange_summary">Turning this option on will force a reconnect if the network state is changed (e.g. WiFi to/from mobile)</string>
    <string name="netchange">Reconnect on network change</string>
    <string name="netstatus">Network Status:</string>
    <string name="uptime">Uptime:</string>
    <string name="tx">TX:</string>
    <string name="rx">RX:</string>
    <string name="local_ip4">Local IPv4:</string>
    <string name="local_ip6">Local IPv6:</string>
    <string name="disabled">disabled</string>
    <string name="subnet_mask">Subnet mask:</string>
    <string name="server_name">Server name:</string>
    <string name="select_file">Select</string>
    <string name="advanced">Advanced</string>
    <string name="setting_loadtun_summary">Try to load the tun.ko kernel module before trying to connect. Needs rooted devices.</string>
    <string name="setting_loadtun">Load tun module</string>
    <string name="trace_log_summary">Increase logging verbosity for debugging purposes. This will affect performance.</string>
    <string name="trace_log">Enable TRACE logging</string>
    <string name="getproxy_error">Error getting proxy settings: %s</string>
    <string name="no_vpn_profiles_defined">No VPN profiles defined.</string>
    <string name="add_new_vpn_hint">Use the &lt;img src=\"ic_menu_add\"/&gt; icon to add a new VPN</string>
    <string name="faq_hint">Be sure to also check out the FAQ if you have not used OpenConnect before.</string>
    <string name="send_minidump">Send Minidump to developer</string>
    <string name="send_minidump_summary">Sends debugging information about last crash to developer</string>
    <string name="notification_input_needed">User input needed</string>
    <string name="notification_touch_here">Touch here to jump to OpenConnect</string>
    <string name="state_connected_to">Connected to %1$s</string>
    <string name="error_connection_failed">Connection failed</string>
    <string name="error_invalid_hostname">Invalid hostname \'%1$s\'</string>
    <string name="error_cant_connect">Error connecting to host \'%1$s\'. See log for details.</string>
    <string name="oneway_bytecount">%1$s/s %2$s</string>
    <string name="statusline_bytecount">↓%2$s/s %1$s - ↑%4$s/s %3$s</string>
    <string name="login_title">%s login</string>
    <string name="make_selection_inline">Copy into profile</string>
    <string name="add">Add</string>
    <string name="prompt">%1$s attempts to control %2$s</string>
    <string name="remote_warning">By proceeding, you are giving the application permission to completely control OpenConnect for Android and to intercept all network traffic. <b> Do NOT accept unless you trust the application. </b> Otherwise, you run the risk of having your data compromised by malicious software."</string>
    <string name="remote_trust">I trust this application.</string>
    <string name="no_external_app_allowed">No app allowed to use external API</string>
    <string name="allowed_apps">Allowed apps: %s</string>
    <string name="server">Server</string>
    <string name="profile_name">Profile name</string>
    <string name="server_address">Server address</string>
    <string name="ca_certificate">CA certificate</string>
    <string name="authentication">Authentication</string>
    <string name="user_certificate">User certificate</string>
    <string name="private_key">Private key</string>
    <string name="software_token">Software token</string>
    <string name="token_string">Token string</string>
    <string name="enter_token_string">Enter token string:</string>
    <string name="token_string_examples_0">Valid formats include:</string>
    <string name="token_string_examples_1" translatable="false">29624-04141-91521-01027-05321-47115-52307-30331-00256-47622-00007-44173-12504-44077-52716-73535-5</string>
    <string name="token_string_examples_2" translatable="false">http://127.0.0.1/securid/ctf?ctfData=213797568467227240150540165305516771132574111177500436764173125710437026671675121</string>
    <string name="token_string_examples_3" translatable="false">com.rsa.securid.iphone://ctf?ctfData=280670666747751343027701722017126407551472632305635574224173125614664606671656613</string>
    <string name="token_need_devid">This token is tied to a specific Device ID, usually found on the "About" screen in the RSA SecurID Software Token app.  Enter the Device ID here:</string>
    <string name="token_need_password">Enter password to unlock token:</string>
    <string name="import_from_file">Import from file&#8230;</string>
    <string name="clear_token">Clear token</string>
    <string name="choose_existing_vpn">Select the VPN profile that will be used with this token, or add a new one:</string>
    <string name="clear_saved_passwords">Clear saved passwords</string>
    <string name="clear_saved_passwords_confirm">Are you sure you want to erase all stored credentials?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="batch_mode">Batch mode</string>
    <string name="reported_os">Reported OS</string>
    <string name="custom_csd_wrapper">Custom CSD wrapper</string>
    <string name="split_tunnel_mode">Split tunnel mode</string>
    <string name="split_tunnel_networks">Split tunnel networks</string>
    <string name="split_tunnel_networks_message">Enter a comma-separated list of subnets to route over the VPN link.  Example:\n\n192.168.22.0/24, 10.15.0.0/16</string>
    <string name="disable_username_caching">Disable credential caching</string>
    <string name="disable_username_caching_summary">Never cache login names, user groups, or passwords</string>
    <string name="disable_xml_post">Disable XML POST</string>
    <string name="disable_xml_post_summary">Use the old authentication handshake; may fail on newer servers</string>
    <string name="require_pfs">Require PFS</string>
    <string name="require_pfs_summary">Only negotiate cipher suites with Perfect Forward Secrecy.  If the server doesn\'t support PFS, the connection will fail.</string>
    <string name="dpd_override">Override DPD timeout</string>
    <string name="dpd_override_summary">Use a custom Dead Peer Detection timeout instead of the server default</string>
    <string name="dpd_value">DPD timeout</string>
    <string name="dpd_value_message">Enter the new timeout value, in seconds. Typical values range from 30 to 600.</string>
</resources>