<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/token_string_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/enter_token_string" />

    <EditText
        android:id="@+id/token_string_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine|textNoSuggestions" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/token_string_examples_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textStyle="italic"
        android:text="@string/token_string_examples_0" />

    <TextView
        android:id="@+id/token_string_examples_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textStyle="italic"
        android:text="@string/token_string_examples_1" />

    <TextView
        android:id="@+id/token_string_examples_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textStyle="italic"
        android:text="@string/token_string_examples_2" />

    <TextView
        android:id="@+id/token_string_examples_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textStyle="italic"
        android:text="@string/token_string_examples_3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <Button
        android:id="@+id/token_string_import"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_from_file" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <Button
        android:id="@+id/token_string_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_token" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>
