<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/existing_vpn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_existing_vpn" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp" />

    <Spinner
        android:id="@+id/vpn_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30sp" />

    <TextView
        android:id="@+id/new_vpn_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_profile_hostname_prompt" />

    <EditText
        android:id="@+id/new_vpn_hostname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>
