<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/token_need_devid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/token_need_devid" />

    <EditText
        android:id="@+id/token_devid_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textNoSuggestions" >

        <requestFocus />
    </EditText>

    <Space
        android:id="@+id/token_devid_space"
        android:layout_width="match_parent"
        android:layout_height="30sp" />

    <TextView
        android:id="@+id/token_need_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/token_need_password" />

    <EditText
        android:id="@+id/token_password_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

    </LinearLayout>

</LinearLayout>
